--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         <p>Finding a random npm package...</p>
     </div>
 
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.3.6/axios.min.js"></script>
     <script>
     const { createApp } = Vue
 
