Fix logo container spacing

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
             align-items: center;
         }
 
-        #app {
+        .logo__container {
+            margin-top: -10px;
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -34,7 +35,7 @@
     </style>
 </head>
 <body>
-    <div id="app">
+    <div class="logo__container">
         <img src="logo.svg" alt="npm Shuffle Logo" style="width: 100px; height: auto;">
         <p>Finding a random npm package...</p>
     </div>
